--- a/crafts.html
+++ b/crafts.html
@@ -647,7 +647,7 @@
                  <div class="craft-card">
                     <div class="card-top">
                         <div class="craft-img-container">
-                            <img src="kr16.jpg" class="craft-img" onerror="this.src='https://placehold.co/400x300?text=Kangra+Clay'">
+                            <img src="kr29.jpg" class="craft-img" onerror="this.src='https://placehold.co/400x300?text=Kangra+Clay'">
                         </div>
                         <div class="craft-info">
                             <h3 class="craft-title">9. Clay Craft of Kangra <span class="hindi-title">| कांगड़ा की मिट्टी शिल्प</span></h3>
@@ -821,7 +821,7 @@
                         <div class="craft-info">
                             <h3 class="craft-title">10. Sela (Goat Hair Coat) <span class="hindi-title">| सेला</span></h3>
                             <span class="category-badge">Tribal Winter Wear</span>
-                            <p class="craft-intro">Thick overcoats used by shepherds in upper Kullu (Malana, Banjar). Woven manually from goat hair. <br><em>यह गद्दी और पशुपालकों के लिए सर्दियों में जीवन रक्षक वस्त्र माना जाता है। अब यह शिल्प विलुप्त होने की कगार पर है।</em></p>
+                            <p class="craft-intro">Thick overcoats, Socks and sheet made of goat hair twisted by hands, used by shepherds/locals in upper Kullu (Malana, Banjar,Lug Valley). Woven manually from goat hair. <br><em>यह गद्दी और पशुपालकों के लिए सर्दियों में जीवन रक्षक वस्त्र माना जाता है। अब यह शिल्प विलुप्त होने की कगार पर है।</em></p>
                         </div>
                     </div>
                 </div>
@@ -992,7 +992,7 @@
                 <div class="craft-card">
                     <div class="card-top">
                          <div class="craft-img-container">
-                            <img src="kr16.jpg" class="craft-img" onerror="this.src='https://placehold.co/400x300?text=Jewellery'">
+                            <img src="kr30.jpg" class="craft-img" onerror="this.src='https://placehold.co/400x300?text=Jewellery'">
                         </div>
                         <div class="craft-info">
                             <h3 class="craft-title">3. Silver Jewellery <span class="hindi-title">| चांदी के आभूषण</span></h3>
@@ -1026,7 +1026,7 @@
                 <div class="craft-card">
                     <div class="card-top">
                         <div class="craft-img-container">
-                            <img src="kr13.jpg" class="craft-img" onerror="this.src='https://placehold.co/400x300?text=Khajur+Mats'">
+                            <img src="kr12.jpg" class="craft-img" onerror="this.src='https://placehold.co/400x300?text=Khajur+Mats'">
                         </div>
                         <div class="craft-info">
                             <h3 class="craft-title">Khajur Mats & Rope <span class="hindi-title">| खजूर की चटाई</span></h3>
@@ -1115,3 +1115,4 @@
     </script>
 </body>
 </html>
+
