--- a/crafts.html
+++ b/crafts.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="theme-color" content="#5D4037">
+    <meta name="theme-color" content="#682228">
     <title>Crafts of Himachal | Virasat-e-Himachal | Handiweave</title>
     <meta name="description" content="An authoritative, district-wise documentation of Himachal Pradesh's indigenous crafts by Handiweave. Explore GI-tagged arts, traditional techniques, and cultural heritage.">
     <link rel="icon" type="image/png" href="favicon.png">
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <style>
         :root {
-            --brand-brown: #5D4037;
+            --brand-wine: #682228;
             --brand-gold: #c5a059;
             --bg-cream: #FFFBF0;
             --text-dark: #2c2c2c;
@@ -119,7 +119,7 @@
             scroll-margin-top: 120px;
         }
         .district-header {
-            background: linear-gradient(135deg, var(--brand-brown) 0%, #3e2723 100%);
+            background: linear-gradient(135deg, var(--brand-brown) 0%, #3a0e12 100%);
             color: #fff;
             padding: 18px 30px;
             display: flex;
@@ -1264,3 +1264,4 @@
     </script>
 </body>
 </html>
+
