--- a/about.html
+++ b/about.html
@@ -24,20 +24,26 @@
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&family=Playfair+Display:wght@400;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <div class="trust-banner"><span><i class="fas fa-certificate"></i> Devbhoomi Himachal</span><span><i class="fas fa-hand-holding-heart"></i> 100% Handcrafted</span><span><i class="fas fa-truck"></i> Pan India Shipping</span></div>
+    <div class="trust-banner"><span><i class="fas fa-certificate"></i> Devbhoomi Himachal</span><span><i class="fas fa-hand-holding-heart"></i> Handloom & Handcrafted</span><span><i class="fas fa-truck"></i> Pan India Shipping</span></div>
     <a href="https://wa.me/919882212962" class="whatsapp-float" target="_blank"><i class="fab fa-whatsapp"></i></a>
     <div class="cart-icon" onclick="openCart()"><i class="fas fa-shopping-bag"></i><span class="cart-count" id="cartCount">0</span></div>
 
-    <nav class="main-nav">
-        <div class="search-container"><input type="text" id="searchInput" placeholder="Search product..." onkeyup="searchProducts(event)"><i class="fas fa-search" onclick="searchProducts(event)"></i></div>
-        <a href="index.html" class="nav-link">Home</a>
-        <a href="shop.html" class="nav-link">Wovens</a>
-        <a href="about.html" class="nav-link active">Story</a>
-        <a href="journal.html" class="nav-link">Journal</a>
-        <a href="crafts.html" class="nav-link">Crafts</a>
-        <a href="contact.html" class="nav-link">Contact</a>
-        <a href="policies.html" class="nav-link">Policies</a>
-    </nav>
+    <nav class="main-nav" style="background-color: #682228 !important; padding: 0.8rem 2rem; display: flex; justify-content: space-between; align-items: center; border-bottom: 2px solid #c5a059; position: sticky; top: 0; z-index: 1000;">
+    
+    <a href="index.html" style="display: flex; align-items: center; text-decoration: none; gap: 12px;">
+        <img src="logo.png" alt="Handiweave Logo" style="width: 45px; height: 45px; object-fit: contain; background: #fff; padding: 2px; border-radius: 5px; border: 1px solid #c5a059;" onerror="this.style.display='none'">
+        <span style="font-family: 'Playfair Display', serif; font-size: 1.8rem; font-weight: bold; color: #c5a059; letter-spacing: 1px; text-transform: uppercase;">Handiweave</span>
+    </a>
+
+    <div style="display: flex; gap: 20px;">
+        <a href="index.html" class="nav-link" style="color: #f0e6d6; text-decoration: none; font-weight: 500;">Home</a>
+        <a href="shop.html" class="nav-link" style="color: #f0e6d6; text-decoration: none; font-weight: 500;">Wovens</a>
+        <a href="journal.html" class="nav-link" style="color: #f0e6d6; text-decoration: none; font-weight: 500;">Journal</a>
+        <a href="crafts.html" class="nav-link" style="color: #f0e6d6; text-decoration: none; font-weight: 500;">Crafts</a>
+        <a href="about.html" class="nav-link" style="color: #f0e6d6; text-decoration: none; font-weight: 500;">Story</a>
+        <a href="contact.html" class="nav-link" style="color: #f0e6d6; text-decoration: none; font-weight: 500;">Contact</a>
+    </div>
+</nav>
 
     <section class="section-container" style="display:block;">
         <div class="story-container" style="background-color: #FDFBF7; padding: 2.5rem; border-radius: 8px; border: 1px solid #EFEBE0; box-shadow: 0 4px 15px rgba(0,0,0,0.05);">
@@ -75,5 +81,6 @@
 </body>
 
 </html>
+
 
 
