--- a/about.html
+++ b/about.html
@@ -40,7 +40,7 @@
         <a href="shop.html" class="nav-link" style="color: #f0e6d6; text-decoration: none; font-weight: 500;">Wovens</a>
         <a href="journal.html" class="nav-link" style="color: #f0e6d6; text-decoration: none; font-weight: 500;">Journal</a>
         <a href="crafts.html" class="nav-link" style="color: #f0e6d6; text-decoration: none; font-weight: 500;">Crafts</a>
-        <a href="about.html" class="nav-link" style="color: #f0e6d6; text-decoration: none; font-weight: 500;">Story</a>
+        <a href="about.html" class="nav-link" style="color: #c5a059; text-decoration: none; font-weight: 700; border-bottom: 2px solid #c5a059;">Story</a>
         <a href="contact.html" class="nav-link" style="color: #f0e6d6; text-decoration: none; font-weight: 500;">Contact</a>
     </div>
 </nav>
@@ -81,6 +81,7 @@
 </body>
 
 </html>
+
 
 
 
