--- a/shop.html
+++ b/shop.html
@@ -26,7 +26,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&family=Playfair+Display:wght@400;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <div class="trust-banner"><span><i class="fas fa-certificate"></i> Devbhoomi Himachal</span><span><i class="fas fa-hand-holding-heart"></i> 100% Handcrafted</span><span><i class="fas fa-truck"></i> Pan India Shipping</span></div>
+    <div class="trust-banner"><span><i class="fas fa-certificate"></i> Devbhoomi Himachal</span><span><i class="fas fa-hand-holding-heart"></i> Handloom & Handcrafted</span><span><i class="fas fa-truck"></i> Pan India Shipping</span></div>
     <a href="https://wa.me/919882212962" class="whatsapp-float" target="_blank"><i class="fab fa-whatsapp"></i></a>
     <div class="cart-icon" onclick="openCart()"><i class="fas fa-shopping-bag"></i><span class="cart-count" id="cartCount">0</span></div>
 
@@ -73,5 +73,6 @@
 </body>
 
 </html>
+
 
 
