--- a/journal.html
+++ b/journal.html
@@ -135,6 +135,7 @@
         <a href="journal.html" style="color: #c5a059; text-decoration: none; font-weight: 700; border-bottom: 2px solid #c5a059;">Journal</a>
         <a href="crafts.html" style="color: #f0e6d6; text-decoration: none; font-weight: 500;">Crafts</a>
         <a href="contact.html" style="color: #f0e6d6; text-decoration: none; font-weight: 500;">Contact</a>
+        <a href="policies.html" style="color: #f0e6d6; text-decoration: none; font-weight: 500;">Policies</a>
     </div>
 </nav>
 
@@ -470,6 +471,7 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
