--- a/about.html
+++ b/about.html
@@ -42,6 +42,7 @@
         <a href="crafts.html" class="nav-link" style="color: #f0e6d6; text-decoration: none; font-weight: 500;">Crafts</a>
         <a href="about.html" class="nav-link" style="color: #c5a059; text-decoration: none; font-weight: 700; border-bottom: 2px solid #c5a059;">Story</a>
         <a href="contact.html" class="nav-link" style="color: #f0e6d6; text-decoration: none; font-weight: 500;">Contact</a>
+        <a href="policies.html" style="color: #f0e6d6; text-decoration: none; font-weight: 500;">Policies</a>
     </div>
 </nav>
 
@@ -81,6 +82,7 @@
 </body>
 
 </html>
+
 
 
 
