--- a/contact.html
+++ b/contact.html
@@ -36,6 +36,7 @@
         <a href="journal.html" style="color: #f0e6d6; text-decoration: none; font-weight: 500;">Journal</a>
         <a href="crafts.html" style="color: #f0e6d6; text-decoration: none; font-weight: 500;">Crafts</a>
         <a href="contact.html" style="color: #c5a059; text-decoration: none; font-weight: 700; border-bottom: 2px solid #c5a059;">Contact</a>
+        <a href="policies.html" style="color: #f0e6d6; text-decoration: none; font-weight: 500;">Policies</a>
     </div>
 </nav>
 
@@ -66,5 +67,6 @@
 </body>
 
 </html>
+
 
 
