--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
         <p style="max-width: 700px; margin: 0 auto; opacity: 0.9;">Premium handcrafted wovens from Devbhoomi Himachal</p>
     </section>
 
-    <nav class="main-nav" style="background-color: #682228 !important; padding: 0.5rem 1rem; display: flex; justify-content: center; align-items: center; border-bottom: 2px solid #c5a059; position: sticky; top: 0; z-index: 1000;">
+    <nav class="main-nav" style="background-color: #682228 !important; padding: 0.8rem 0; display: flex; flex-wrap: wrap; justify-content: center; gap: 15px; border-bottom: 2px solid #c5a059; position: sticky; top: 0; z-index: 1000;">
     
     <div style="display: flex; gap: 25px; align-items: center; flex-wrap: wrap; justify-content: center;">
         <a href="index.html" style="color: #c5a059; text-decoration: none; font-weight: 700; border-bottom: 2px solid #c5a059;">Home</a>
@@ -234,6 +234,7 @@
     
 </body>
 </html>
+
 
 
 
