--- a/about.html
+++ b/about.html
@@ -28,7 +28,7 @@
     <a href="https://wa.me/919882212962" class="whatsapp-float" target="_blank"><i class="fab fa-whatsapp"></i></a>
     <div class="cart-icon" onclick="openCart()"><i class="fas fa-shopping-bag"></i><span class="cart-count" id="cartCount">0</span></div>
 
-    <nav class="main-nav" style="background-color: #682228 !important; padding: 0.8rem 2rem; display: flex; justify-content: space-between; align-items: center; border-bottom: 2px solid #c5a059; position: sticky; top: 0; z-index: 1000;">
+    <nav class="main-nav" style="background-color: #682228 !important; padding: 0.8rem 0; display: flex; flex-wrap: wrap; justify-content: center; gap: 15px; border-bottom: 2px solid #c5a059; position: sticky; top: 0; z-index: 1000;">
     
     <a href="index.html" style="display: flex; align-items: center; text-decoration: none; gap: 12px;">
         <img src="logo.png" alt="Handiweave Logo" style="width: 45px; height: 45px; object-fit: contain; background: #fff; padding: 2px; border-radius: 5px; border: 1px solid #c5a059;" onerror="this.style.display='none'">
@@ -82,6 +82,7 @@
 </body>
 
 </html>
+
 
 
 
