--- a/about.html
+++ b/about.html
@@ -15,7 +15,8 @@
 
 <link rel="canonical" href="https://handiweave.com/about.html">
 
-<link rel="icon" type="image/png" href="favicon.png">
+<link rel="shortcut icon" href="favicon.png" type="image/x-icon">
+<link rel="icon" href="favicon.png" type="image/x-icon">
 <link rel="stylesheet" href="style.css">
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-SEWM8S3WL0"></script>
     <script>window.dataLayer = window.dataLayer || []; function gtag(){dataLayer.push(arguments);} gtag('js', new Date()); gtag('config', 'G-SEWM8S3WL0');</script>
@@ -82,6 +83,7 @@
 </body>
 
 </html>
+
 
 
 
