--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
     <meta property="og:type" content="website">
 
     <link rel="canonical" href="https://handiweave.com/">
-    <link rel="icon" type="image/png" href="favicon.png">
+    <link rel="shortcut icon" href="favicon.png" type="image/x-icon">
+    <link rel="icon" href="favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="style.css?v=3">
     
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
@@ -234,6 +235,7 @@
     
 </body>
 </html>
+
 
 
 
