--- a/journal.html
+++ b/journal.html
@@ -16,7 +16,8 @@
 
     <link rel="canonical" href="https://handiweave.com/journal.html">
     
-    <link rel="icon" type="image/png" href="favicon.png">
+    <link rel="shortcut icon" href="favicon.png" type="image/x-icon">
+    <link rel="icon" href="favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
 
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-SEWM8S3WL0"></script>
@@ -471,6 +472,7 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
