--- a/shop.html
+++ b/shop.html
@@ -16,7 +16,8 @@
 
 <link rel="canonical" href="https://handiweave.com/shop.html">
 
-<link rel="icon" type="image/png" href="favicon.png">
+<link rel="shortcut icon" href="favicon.png" type="image/x-icon">
+<link rel="icon" href="favicon.png" type="image/x-icon">
 
 <link rel="stylesheet" href="style.css">
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-SEWM8S3WL0"></script>
@@ -73,6 +74,7 @@
 </body>
 
 </html>
+
 
 
 
