--- a/policies.html
+++ b/policies.html
@@ -18,22 +18,38 @@
     <a href="https://wa.me/919882212962" class="whatsapp-float" target="_blank"><i class="fab fa-whatsapp"></i></a>
     <div class="cart-icon" onclick="openCart()"><i class="fas fa-shopping-bag"></i><span class="cart-count" id="cartCount">0</span></div>
 
-    <nav class="main-nav" style="background-color: #682228 !important; padding: 0.8rem 0; display: flex; flex-wrap: wrap; justify-content: center; gap: 15px; border-bottom: 2px solid #c5a059; position: sticky; top: 0; z-index: 1000;">
+    <nav class="main-nav" style="background-color: #682228 !important; padding: 10px 0; border-bottom: 2px solid #c5a059; position: sticky; top: 0; z-index: 1000; display: flex; flex-direction: column; align-items: center;">
     
-    <a href="index.html" style="display: flex; align-items: center; text-decoration: none; gap: 12px;">
-        <img src="logo.png" alt="Handiweave Logo" style="width: 45px; height: 45px; object-fit: contain; background: #fff; padding: 2px; border-radius: 5px; border: 1px solid #c5a059;" onerror="this.style.display='none'">
-        <span style="font-family: 'Playfair Display', serif; font-size: 1.8rem; font-weight: bold; color: #c5a059; letter-spacing: 1px; text-transform: uppercase;">Handiweave</span>
-    </a>
-
-    <div style="display: flex; gap: 20px; align-items: center;">
-        <a href="index.html" style="color: #f0e6d6; text-decoration: none; font-weight: 500;">Home</a>
-        <a href="shop.html" style="color: #f0e6d6; text-decoration: none; font-weight: 500;">Wovens</a>
-        <a href="about.html" style="color: #f0e6d6; text-decoration: none; font-weight: 500;">Story</a>
-        <a href="journal.html" style="color: #f0e6d6; text-decoration: none; font-weight: 500;">Journal</a>
-        <a href="crafts.html" style="color: #f0e6d6; text-decoration: none; font-weight: 500;">Crafts</a>
-        <a href="contact.html" style="color: #f0e6d6; text-decoration: none; font-weight: 500;">Contact</a>
-        <a href="policies.html" style="color: #c5a059; text-decoration: none; font-weight: 700; border-bottom: 2px solid #c5a059;">Policies</a>
+    <div style="display: flex; gap: 15px; margin-bottom: 8px; justify-content: center; width: 100%;">
+        <a href="index.html" class="nav-small">Home</a>
+        <a href="shop.html" class="nav-small">Wovens</a>
+        <a href="about.html" class="nav-small">Story</a>
+        <a href="journal.html" class="nav-small">Journal</a>
     </div>
+
+    <div style="display: flex; gap: 15px; justify-content: center; width: 100%;">
+        <a href="crafts.html" class="nav-small">Crafts</a>
+        <a href="contact.html" class="nav-small">Contact</a>
+        <a href="policies.html" class="nav-small" style="color: #c5a059; font-weight: 700; border-bottom: 2px solid #c5a059;">Policies</a>
+    </div>
+
+    <style>
+        .nav-small {
+            color: #f0e6d6;
+            text-decoration: none;
+            font-family: 'Lato', sans-serif;
+            font-size: 13px; /* Mobile Friendly Font Size */
+            font-weight: 500;
+            letter-spacing: 0.5px;
+            transition: 0.3s;
+        }
+        .nav-small:hover { color: #c5a059; }
+        
+        /* Choti screen par gap adjust karne ke liye */
+        @media (max-width: 400px) {
+            .nav-small { font-size: 12px; }
+        }
+    </style>
 </nav>
     <section class="section-container" style="display:block;">
         <h2>Our Policies</h2>
@@ -94,5 +110,6 @@
 </body>
 
 </html>
+
 
 
