--- a/crafts.html
+++ b/crafts.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="theme-color" content="#682228"> <title>Crafts of Himachal | Virasat-e-Himachal | Handiweave</title>
+    <meta name="theme-color" content="#682228"> <title>Crafts of Himachal Pradesh | Virasat-e-Himachal | Handiweave</title>
     <meta name="description" content="An authoritative, district-wise documentation of Himachal Pradesh's indigenous crafts by Handiweave. Explore GI-tagged arts, traditional techniques, and cultural heritage.">
     <link rel="shortcut icon" href="favicon.png" type="image/x-icon">
     <link rel="icon" href="favicon.png" type="image/x-icon">
@@ -493,6 +493,7 @@
             <a href="journal.html">Journal</a>
             <a href="crafts.html" style="color:#c5a059; font-weight:700; border-bottom:2px solid #c5a059;">Crafts</a>
             <a href="contact.html">Contact</a>
+            <a href="Policies.html" class="nav-small">Policies</a>
         </div>
     </nav>
 
@@ -1390,4 +1391,5 @@
     </script>
 </body>
 </html>
+
 
