--- a/crafts.html
+++ b/crafts.html
@@ -828,7 +828,7 @@
                             <span class="category-badge">Fibre Craft</span>
                             
                             <p class="craft-intro">
-                                <strong>Biul</strong> (locally <em>ब्यूल/Bhimlu</em>) is a native Himalayan tree (<em>Grewia optiva</em>) crucial for natural fibre. The extraction is a manual, seasonal process passed down through generations. The fibre is valued for its high tensile strength and is hand-twisted to create ropes for agriculture and construction.
+                                <strong>Biul</strong> (locally <em>ब्यूल/Bhimlu</em>) is a native Himalayan tree <em>Grewia optiva</em> crucial for natural fibre. The extraction is a manual, seasonal process passed down through generations. The fibre is valued for its high tensile strength and is hand-twisted to create ropes for agriculture and construction.
                             </p>
                             
                             <button class="accordion-btn" onclick="togglePanel(this)">Read Process & History <i class="fas fa-chevron-down"></i></button>
@@ -842,8 +842,8 @@
                                     <li><strong>Twisting:</strong> Dried fibres are hand-rolled (without machines) to form strong ropes.</li>
                                 </ul>
 
-                                <h5>Historical Context: Rice Straw vs. Biul</h5>
-                                <p>Before Biul became dominant, ropes were made from <strong>Rice Straw (धान की पराली)</strong>. However, Biul replaced straw due to its superior strength and longer lifespan, essential for the rugged hilly terrain.</p>
+                                <h5>Alternate: Rice Straw </h5>
+                                <p>Rice straw were also used as ropes. <strong>Rice Straw (धान की पराली)</strong>. However, Biul is dominant over straw due to its superior strength and longer lifespan, essential for the rugged hilly terrain.</p>
 
                                 <h5>Cultural Significance</h5>
                                 <p>This craft represents a self-sustaining rural material system. It documents a living relationship between people, the forest, and non-industrial production.</p>
@@ -1391,5 +1391,6 @@
     </script>
 </body>
 </html>
+
 
 
