--- a/index.html
+++ b/index.html
@@ -66,12 +66,12 @@
         <p>
             Handiweave is currently undergoing maintenance to serve you better. 
             We will be back soon with new collections!
-            <br><br>
-            For urgent orders or queries, please message us directly.
+           <br><br>
+            For urgent orders or queries, please email us directly.
         </p>
         
-        <a href="https://wa.me/919882212962" class="btn">
-            <i class="fab fa-whatsapp"></i> Chat on WhatsApp
+        <a href="mailto:handiweave@gmail.com" class="btn">
+            <i class="fas fa-envelope"></i> Email Us
         </a>
         
         <div style="margin-top: 40px; font-size: 0.9rem; opacity: 0.7;">
@@ -81,3 +81,4 @@
 
 </body>
 </html>
+
